<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/add_friend_messaging" />


    <item
        android:id="@+id/action_edit_profile"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/profile_messaging" />


    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:title="@string/logout_messaging" />

    <item
        android:id="@+id/action_group"
        android:icon="@drawable/ic_check_green_24dp"
        android:title="Groups" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_messaging"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />


    <item
        android:id="@+id/action_incoming_requests"
        android:icon="@drawable/ic_check_green_24dp"
        android:title="@string/incoming_requests_messaging"
        app:actionLayout="@layout/notification_badge_layout"
        app:showAsAction="ifRoom" />


</menu>