<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_filter_settings_userloanrequest"
        android:title="@string/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search_userloanrequest"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"/>

    <item
        android:id="@+id/action_create_userloanrequest"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/create"/>


</menu>